--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,21 +1,34 @@
 <div class="panel panel-default">
-<div class="panel-heading">
- メッセージ一覧
-</div>
-<div class="panel-body">
-<% @messages.each do |message| %>
-<span class="label label-info"><%= message.name %></span>
-<%= message.body %>
- <br>
-<% end %>
-</div>
+ <div class="panel-heading">
+  メッセージ一覧
+ </div>
+ <div class="panel-body">
+  <% @messages.each do |message| %>
+   <span class="label label-info"><%= message.name %></span>
+   <%=m essage.body %>
+    <br>
+    <% end %>
+ </div>
 </div>
 
-<%= form_for(@message) do |f| %>
- 名前：
- <%= f.text_field :name %>
- 
- 内容：
- <%= f.text_field :body %>
- <%= f.submit class: "btn btn-sm btn-primary" %>
-<% end %>
+<%=f orm_for(@message) do |f| %>
+ <div class="form-group">
+  <label for="inputName" class="col-sm-2 control-label">名前</label>
+  <div class="col-sm-10">
+   <%=f .text_field :name, class: "form-control", id: "inputName" %>
+  </div>
+ </div>
+
+ <div class="form-group">
+  <label for="inputContent" class="col-sm-2 control-label">内容</label>
+  <div class="col-sm-10">
+   <%=f .text_area :body, class: "form-control", id: "inputContent", placeholder: "内容" %>
+  </div>
+ </div>
+
+ <div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10">
+   <%=f .submit class: "btn btn-sm btn-primary" %>
+  </div>
+ </div>
+ <% end %>
