--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,30 +5,30 @@
  <div class="panel-body">
   <% @messages.each do |message| %>
    <span class="label label-info"><%= message.name %></span>
-   <%=m essage.body %>
+   <%= message.body %>
     <br>
     <% end %>
  </div>
 </div>
 
-<%=f orm_for(@message) do |f| %>
+<%= form_for(@message, html: {class: 'form-horizontal'}) do |f| %>
  <div class="form-group">
   <label for="inputName" class="col-sm-2 control-label">名前</label>
   <div class="col-sm-10">
-   <%=f .text_field :name, class: "form-control", id: "inputName" %>
+   <%= f.text_field :name, class: "form-control", id: "inputName" %>
   </div>
  </div>
 
  <div class="form-group">
   <label for="inputContent" class="col-sm-2 control-label">内容</label>
   <div class="col-sm-10">
-   <%=f .text_area :body, class: "form-control", id: "inputContent", placeholder: "内容" %>
+   <%= f.text_area :body, class: "form-control", id: "inputContent", placeholder: "内容" %>
   </div>
  </div>
 
  <div class="form-group">
   <div class="col-sm-offset-2 col-sm-10">
-   <%=f .submit class: "btn btn-sm btn-primary" %>
+   <%= f.submit class: "btn btn-sm btn-primary" %>
   </div>
  </div>
  <% end %>
