--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -22,7 +22,7 @@
  <div class="form-group">
   <label for="inputContent" class="col-sm-2 control-label">内容</label>
   <div class="col-sm-10">
-   <%= f.text_area :body, class: "form-control", id: "inputContent", placeholder: "内容" %>
+   <%= f.text_area :body, class: "form-control", id: "inputContent", placeholder: "2文字以上30文字以内" %>
   </div>
  </div>
 
