--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -18,6 +18,13 @@
    <%= f.text_field :name, class: "form-control", id: "inputName" %>
   </div>
  </div>
+ 
+ <div class="form-group">
+  <label for="inputAge" class="col-sm-2 control-label">年齢</label>
+  <div class="col-sm-10">
+   <%= f.text_field :age, class: "form-control", id: "inputAge", type: "number" %>
+  </div>
+ </div>
 
  <div class="form-group">
   <label for="inputContent" class="col-sm-2 control-label">内容</label>
