--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,7 +4,7 @@
  </div>
  <div class="panel-body">
   <% @messages.each do |message| %>
-   <span class="label label-info"><%= message.name %></span>
+   <span class="label label-info"><%= message.name %> (<%= message.age %>)</span>
    <%= message.body %>
    (<%= link_to "edit" , edit_message_path(message) %>
     <%= link_to "destroy" , message , method: :delete, data: { confirm: '削除してもよろしいですか？' } %>)
